workspace-sf/force-app/main/default/objects/DeclaracaoSaude__c/DeclaracaoSaude__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as declarações de saúde das contas</description>
    <label>Declaração de saúde</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da declaração da saúde</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declarações de saúde</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>