workspace-sf/force-app/main/default/objects/DeclaracaoSaude__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>DeclaracoesSaude</relationshipName>
    <type>Lookup</type>
</CustomField>