workspace-sf/force-app/main/default/objects/DeclaracaoSaude__c/fields/DataResposta__c.field-meta.xml
<CustomField>
    <fullName>DataResposta__c</fullName>
    <label>Data de preenchimento</label>
    <type>Date</type>
</CustomField>