workspace-sf/force-app/main/default/objects/DeclaracaoSaude__c/fields/QuestionarioRisco__c.field-meta.xml
<CustomField>
    <fullName>QuestionarioRisco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionário de Risco</label>
    <referenceTo>Questionario__c</referenceTo>
    <relationshipLabel>Declarações de saúde</relationshipLabel>
    <relationshipName>DeclaracoesSaude</relationshipName>
    <type>Lookup</type>
</CustomField>